@@ -19,4 +19,5 @@ kotlin {
 
 application {
     mainClass.set("systems.zlink.samples.kotlin.deliverydispatch.client.ProgramKt")
+    applicationDefaultJvmArgs = listOf("--enable-native-access=ALL-UNNAMED")
 }
