@@ -21,4 +21,5 @@ kotlin {
 
 application {
     mainClass.set("systems.zlink.samples.kotlin.deliverydispatch.server.registry.ProgramKt")
+    applicationDefaultJvmArgs = listOf("--enable-native-access=ALL-UNNAMED")
 }
